What's New for PSPRadio
========================
1.15.xxxx (2007-02-xx)
NEW FEATURES
BUG FIXES
(raf) Core: Fixed button repeat handling that broke when implemented the button mapping.
KNOWN BUGS
(raf) Core: Static IP connections don't work correctly. Seems the gateway is not used as it should.
(raf) Core: Module unloading doesn't free up all memory correctly. Even though plugins can now be loaded/unloaded, the PSP can eventually crash as it runs out of memory (after loading/unloading enough times; even though I switched back and forth between the text and 3d UIs over 20 times, and everything worked fine).

1.15.1283 (2007-02-26)
NEW FEATURES
(raf) Core: Added AUTOSTART option under USB, instead of it being its own option, and using up screenspace.
(raf) Core: Better Suspend/Resume support.
(raf) Core: Added Tell/Seek functions to the streams/decoding. Added support to resume to continue playing where it was before it went into suspend mode (localfiles).
(raf) Core: Buttons can now be mapped. Look at PSPRadio.cfg for details. Changed the default mappings. SQUARE=CANCEL now. L+R cycle screens. (Button combinations are now also allowed).
(raf) Core/Plugin/Version: Changed the interface to .15. Working on a revamped interface. (will be .2). TextUI uses the button mapping to remap buttons if the skin is configured to do so (look at SHOUTcastScreen.cfg for an example).
BUG FIXES
(raf) Core: USB is now working again, thanks to AhMan's for the help.
KNOWN BUGS
(raf) Core: Static IP connections don't work correctly. Seems the gateway is not used as it should.
(raf) Core: Module unloading doesn't free up all memory correctly. Even though plugins can now be loaded/unloaded, the PSP can eventually crash as it runs out of memory (after loading/unloading enough times; even though I switched back and forth between the text and 3d UIs over 20 times, and everything worked fine).

1.1.1271 (2007-02-12)
NEW FEATURES